--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3auth/web3auth": "^0.10.0",
+    "magic-sdk": "^7.0.0",
+    "moralis": "^1.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.3.5",
+    "web3uikit": "^0.1.140"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
