--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
+    "@coinbase/wallet-sdk": "^3.0.11",
+    "@thirdweb-dev/react": "^2.2.6",
+    "@thirdweb-dev/sdk": "^2.2.4",
     "@web3auth/web3auth": "^0.10.0",
+    "ethers": "^5.6.5",
     "magic-sdk": "^7.0.0",
     "moralis": "^1.6.0",
     "next": "12.1.6",
